--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server:dev": "json-server --watch ./data/db.json --static ./public",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack -w"
   },
@@ -26,9 +27,12 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "jquery": "^3.4.1",
     "json-server": "^0.15.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-paginate": "^6.3.0"
+    "react-paginate": "^6.3.0",
+    "request": "^2.88.0"
   }
 }
